# gst

./: .gitignore  MANIFEST.in  README.md  antarctica.py  bug.py  bug1.py  bug2.py  compareBufferAngularResolutions.py  compareBufferRadialResolutions.py  compareBufferResolutions.py  compareDatasets.py  compareGshhgMapResolutions.py  compareMapResolutions.py  compareNeMapResolutions.py  compareResolutions.py  complexity.py  createCanals.py  feature.py  findExtentOfCoastlines.py  findExtentOfGshhgCoastlines.py  findExtentOfNeCoastlines.py  git-files.txt  lands.py  lengths.py  listGeneratedLands.py  pyproject.toml  requirements.txt  resolutionConvergence.py  ripples.py  run.py  runs.sh  shapelyOperations.py  showNarrowPassages.py  timings.py
.github/workflows/: pylint.yaml  shellcheck.yml
funcs/: __init__.py  load_lands.py  remove_interior_rings.py  remove_land.py  remove_lands.py  sail.py  save_allLands.py
gst/: __init__.py  __main__.py  removeInteriorRings.py  removeInteriorRingsWhichAreLand.py  removeLands.py  sail.py  saveAllCanals.py  saveAllLands.py  saveRelevantLands.py  save_allLands.py
